[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicoder-rl"
version = "0.1.0"
description = "Autonomous RL Medical Coding Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "streamlit",
    "google-generativeai",
    "python-dotenv",
    "pandas"
]

[tool.setuptools]
packages = ["core", "frontend"]